absolutly beautiful when it passes all test cases
