# openapi.json
@@ -11,7 +11,65 @@
       }
    ],
    "components": {
+      "securitySchemes": {
+         "bearerAuth": {
+            "type": "http",
+            "scheme": "bearer",
+            "bearerFormat": "JWT"
+         }
+      },
       "schemas": {
+         "User": {
+            "type": "object",
+            "properties": {
+               "id": {
+                  "type": "integer",
+                  "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
+               "username": {
+                  "type": "string"
+               },
+               "password": {
+                  "type": "string"
+               }
+            },
+            "required": [
+               "id",
+               "username",
+               "password"
+            ],
+            "description": "A book record with all its properties",
+            "title": "User"
+         },
+         "UserCreate": {
+            "type": "object",
+            "properties": {
+               "id": {
+                  "type": "integer",
+                  "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
+               "username": {
+                  "type": "string",
+                  "minLength": 4,
+                  "maxLength": 255
+               },
+               "password": {
+                  "type": "string",
+                  "minLength": 4,
+                  "maxLength": 40,
+                  "pattern": "[A-Z]"
+               }
+            },
+            "required": [
+               "username",
+               "password"
+            ],
+            "additionalProperties": false,
+            "description": "Schema for creating a new book record",
+            "title": "UserCreate"
+         },
          "Book": {
             "type": "object",
             "properties": {
@@ -277,9 +335,146 @@
       "parameters": {}
    },
    "paths": {
+      "/auth/signup": {
+         "post": {
+            "description": "Register a new user",
+            "tags": [
+               "Authentication"
+            ],
+            "requestBody": {
+               "content": {
+                  "application/json": {
+                     "schema": {
+                        "$ref": "#/components/schemas/UserCreate"
+                     }
+                  }
+               }
+            },
+            "responses": {
+               "201": {
+                  "description": "User created successfully",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "$ref": "#/components/schemas/User"
+                        }
+                     }
+                  }
+               },
+               "409": {
+                  "description": "Username already exists"
+               }
+            }
+         }
+      },
+      "/auth/authorize": {
+         "post": {
+            "description": "Authorize user credentials",
+            "tags": [
+               "Authentication"
+            ],
+            "requestBody": {
+               "content": {
+                  "application/json": {
+                     "schema": {
+                        "$ref": "#/components/schemas/User"
+                     }
+                  }
+               }
+            },
+            "responses": {
+               "200": {
+                  "description": "Authorization successful",
+                  "headers": {
+                     "Set-Cookie": {
+                        "schema": {
+                           "type": "string",
+                           "example": "Authorization=Bearer {jwt}; HttpOnly; Secure; SameSite=Strict"
+                        }
+                     }
+                  },
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "user": {
+                                 "$ref": "#/components/schemas/User"
+                              },
+                              "token": {
+                                 "type": "string",
+                                 "description": "JWT Bearer token"
+                              }
+                           },
+                           "required": [
+                              "user",
+                              "token"
+                           ],
+                           "description": "Authentication response with user data and JWT token",
+                           "title": "AuthResponse"
+                        }
+                     }
+                  }
+               },
+               "401": {
+                  "description": "Invalid credentials"
+               },
+               "404": {
+                  "description": "Username not found"
+               }
+            }
+         }
+      },
+      "/auth/access-token": {
+         "post": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
+            "description": "Get access token with refresh token",
+            "tags": [
+               "Authentication"
+            ],
+            "responses": {
+               "200": {
+                  "description": "New access token generated"
+               },
+               "401": {
+                  "description": "Invalid or expired refresh token"
+               }
+            }
+         }
+      },
+      "/auth/logout": {
+         "post": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
+            "description": "Logout user and invalidate tokens",
+            "tags": [
+               "Authentication"
+            ],
+            "responses": {
+               "200": {
+                  "description": "Successfully logged out"
+               },
+               "401": {
+                  "description": "Invalid token"
+               }
+            }
+         }
+      },
       "/books": {
          "get": {
             "description": "Get all books with optional filtering",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Books"
             ],
@@ -372,6 +567,11 @@
          },
          "post": {
             "description": "Create a new book",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Books"
             ],
@@ -403,6 +603,11 @@
       },
       "/books/{id}": {
          "get": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "description": "Get a book by its ID",
             "tags": [
                "Books"
@@ -436,6 +641,11 @@
             }
          },
          "put": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "description": "Update an existing book",
             "tags": [
                "Books"
@@ -482,6 +692,11 @@
          },
          "delete": {
             "description": "Delete a book",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Books"
             ],
@@ -510,6 +725,11 @@
       "/authors": {
          "get": {
             "description": "Get all authors",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Authors"
             ],
@@ -553,6 +773,11 @@
          },
          "post": {
             "description": "Create an author",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Authors"
             ],
@@ -585,6 +810,11 @@
       "/authors/{id}": {
          "get": {
             "description": "Get author by id",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Authors"
             ],
@@ -618,6 +848,11 @@
          },
          "put": {
             "description": "Update an author",
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "tags": [
                "Authors"
             ],
@@ -659,6 +894,11 @@
             }
          },
          "delete": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
             "description": "Delete an author",
             "tags": [
                "Authors"
